--- a/test-results/old/Surefire suite/methods-alphabetical.html
+++ b/test-results/old/Surefire suite/methods-alphabetical.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Surefire suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6e8abd">  <td>24/09/04 11:09:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:Testrunner.TestSuiterunner@4d339552]">runScenario</td> 
-  <td>main@558187323</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>24/09/04 11:09:53</td>   <td>17483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:Testrunner.TestSuiterunner@4d339552]">runScenario</td> 
-  <td>main@558187323</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>24/09/04 11:09:54</td>   <td>17562</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:Testrunner.TestSuiterunner@4d339552]">runScenario</td> 
-  <td>main@558187323</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>24/09/04 11:09:55</td>   <td>19099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:Testrunner.TestSuiterunner@4d339552]">runScenario</td> 
-  <td>main@558187323</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>24/09/04 11:10:02</td>   <td>25584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:Testrunner.TestSuiterunner@4d339552]">runScenario</td> 
-  <td>main@558187323</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>24/09/04 11:10:03</td>   <td>27115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:Testrunner.TestSuiterunner@4d339552]">runScenario</td> 
-  <td>main@558187323</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>24/09/04 11:10:05</td>   <td>28616</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:Testrunner.TestSuiterunner@4d339552]">runScenario</td> 
-  <td>main@558187323</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>24/09/04 11:09:36</td>   <td>-321</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:Testrunner.TestSuiterunner@4d339552]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@558187323</td>   <td></td> </tr>
-<tr bgcolor="6e8abd">  <td>24/09/04 11:10:06</td>   <td>29539</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:Testrunner.TestSuiterunner@4d339552]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@558187323</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>24/09/08 19:54:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:Testrunner.TestSuiterunner@5a4aa2f2]">runScenario</td> 
+  <td>main@1088872417</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>24/09/08 19:54:33</td>   <td>-312</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:Testrunner.TestSuiterunner@5a4aa2f2]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1088872417</td>   <td></td> </tr>
+<tr bgcolor="8f92ff">  <td>24/09/08 19:54:58</td>   <td>24064</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:Testrunner.TestSuiterunner@5a4aa2f2]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1088872417</td>   <td></td> </tr>
 </table>
